@@ -5,6 +5,8 @@
 - Added fake motion blur module that calculates particle size based on how fast it moves
 - Added turbulence vector field module alongside with adapters to convert from polar to cartesian and back
 - Added tab so multiple projects can be worked on at once
+- Now last open/save/export locations are remembered to suggest in dialog as default
+- New architecture to support addons and multi project behaviour (.tls projects now how to save and behave as well as .bvb projects)
 
 [1.0.5]
 - legacy libGDX particle file importer full functionality
